deploy/kubernetes-work-dev.yml
# 创建service为${PROJECT_NAME}
apiVersion: v1
kind: Service
metadata:
  name: ${PROJECT_NAME}
  namespace: ${NAMESPACE}
spec:
  selector:
    app: ${PROJECT_NAME}
    release: canary
  ports:
    - name: http
      targetPort: 8080
      port: 8080

---
# 创建后端服务的pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${PROJECT_NAME}
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${PROJECT_NAME}
      release: canary
  template:
    metadata:
      labels:
        app: ${PROJECT_NAME}
        release: canary
    spec:
      imagePullSecrets:
        - name: aliyun-docker-registry
      containers:
        - name: ${PROJECT_NAME}
          image: ${ALIYUN_CR_REGISTORY}/${ALIYUN_CR_NAMESPACE}/${PROJECT_NAME}:${VERSION}
          resources:
            requests:
              memory: "6Gi"
              cpu: "1000m"
            limits:
              memory: "12Gi"
              cpu: "3000m"
          ports:
            - name: http
              containerPort: 8080

# ---
# # 创建域名服务
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-${PROJECT_NAME}
#   namespace: ${NAMESPACE}
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
# spec:
#   rules:
#     - host: "${PROJECT_NAME}.${INFRA_DEV_DOMAIN}"
#       http:
#         paths:
#           - pathType: Prefix
#             path: "/"
#             backend:
#               service:
#                 name: ${PROJECT_NAME}
#                 port:
#                   number: 8080
